Version 7.2.101 (24.03.2023) - UPDATED: libraries - ADDED: More user information on current user in user list overlay - CHANGED: Background music is muted whenever a roleplay pane is displayed